m3d.h

    typedef uint32_t M3D_INDEX;
    typedef uint16_t M3D_VOXEL;
    typedef uint16_t M3D_INDEX;
    typedef uint8_t M3D_VOXEL;
    /* voxel data blocks */
    typedef struct
    {
        char *name;        /* name of the block */
        int32_t x, y, z;   /* position */
        uint32_t w, h, d;  /* dimension */
        uint8_t uncertain; /* probability */
        uint8_t groupid;   /* block group id */
        M3D_VOXEL *data;   /* voxel data, indices to voxel type */
    } m3dvx_t;
    /* shape command types. must match the row in m3d_commandtypes */
    enum
    {
        /* special commands */
        m3dc_use = 0, /* use material */
        m3dc_inc,     /* include another shape */
        m3dc_mesh,    /* include part of polygon mesh */
        /* approximations */
        m3dc_div,  /* subdivision by constant resolution for both u, v */
        m3dc_sub,  /* subdivision by constant, different for u and v */
        m3dc_len,  /* spacial subdivision by maxlength */
        m3dc_dist, /* subdivision by maxdistance and maxangle */
        /* modifiers */
        m3dc_degu,   /* degree for both u, v */
        m3dc_deg,    /* separate degree for u and v */
        m3dc_rangeu, /* range for u */
        m3dc_range,  /* range for u and v */
        m3dc_paru,   /* u parameters (knots) */
        m3dc_parv,   /* v parameters */
        m3dc_trim,   /* outer trimming curve */
        m3dc_hole,   /* inner trimming curve */
        m3dc_scrv,   /* spacial curve */
        m3dc_sp,     /* special points */
        /* helper curves */
        m3dc_bez1, /* Bezier 1D */
        m3dc_bsp1, /* B-spline 1D */
        m3dc_bez2, /* bezier 2D */
        m3dc_bsp2, /* B-spline 2D */
        /* surfaces */
        m3dc_bezun,   /* Bezier 3D with control, UV, normal */
        m3dc_bezu,    /* with control and UV */
        m3dc_bezn,    /* with control and normal */
        m3dc_bez,     /* control points only */
        m3dc_nurbsun, /* B-spline 3D */
        m3dc_nurbsu,
        m3dc_nurbsn,
        m3dc_nurbs,
        m3dc_conn, /* connect surfaces */
        /* geometrical */
        m3dc_line,
        m3dc_polygon,
        m3dc_circle,
        m3dc_cylinder,
        m3dc_shpere,
        m3dc_torus,
        m3dc_cone,
        m3dc_cube
    };
    /* shape command argument types */
    enum
    {
        m3dcp_mi_t = 1, /* material index */
        m3dcp_hi_t,     /* shape index */
        m3dcp_fi_t,     /* face index */
        m3dcp_ti_t,     /* texture map index */
        m3dcp_vi_t,     /* vertex index */
        m3dcp_qi_t,     /* vertex index for quaternions */
        m3dcp_vc_t,     /* coordinate or radius, float scalar */
        m3dcp_i1_t,     /* int8 scalar */
        m3dcp_i2_t,     /* int16 scalar */
        m3dcp_i4_t,     /* int32 scalar */
        m3dcp_va_t      /* variadic arguments */
    };
    typedef struct
    {
#ifdef M3D_ASCII
#define M3D_CMDDEF(t, n, p, a, b, c, d, e, f, g, h)                  \
    {                                                                \
        (char *)(n), (p), { (a), (b), (c), (d), (e), (f), (g), (h) } \
    }
        char *key;
#else
#define M3D_CMDDEF(t, n, p, a, b, c, d, e, f, g, h)     \
    {                                                   \
        (p), { (a), (b), (c), (d), (e), (f), (g), (h) } \
    }
#endif
        uint8_t p;
        uint8_t a[M3D_CMDMAXARG];
    } m3dcd_t;
    /* shape command */
    typedef struct
    {
        uint16_t type; /* shape type */
        uint32_t *arg; /* arguments array */
    } m3dc_t;
    /* shape entry */
    typedef struct
    {
        char *name;      /* name of the mathematical shape */
        M3D_INDEX group; /* group this shape belongs to or -1 */
        uint32_t numcmd; /* number of commands */
        m3dc_t *cmd;     /* commands array */
    } m3dh_t;