src/bindings.rs

#[test]
fn bindgen_test_layout_m3dvx_t() {
    assert_eq!(
        ::std::mem::size_of::<m3dvx_t>(),
        48usize,
        concat!("Size of: ", stringify!(m3dvx_t))
    );
    assert_eq!(
        ::std::mem::align_of::<m3dvx_t>(),
        8usize,
        concat!("Alignment of ", stringify!(m3dvx_t))
    );
    fn test_field_name() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dvx_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).name) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dvx_t),
                "::",
                stringify!(name)
            )
        );
    }
    test_field_name();
    fn test_field_x() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dvx_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).x) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dvx_t),
                "::",
                stringify!(x)
            )
        );
    }
    test_field_x();
    fn test_field_y() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dvx_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).y) as usize - ptr as usize
            },
            12usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dvx_t),
                "::",
                stringify!(y)
            )
        );
    }
    test_field_y();
    fn test_field_z() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dvx_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).z) as usize - ptr as usize
            },
            16usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dvx_t),
                "::",
                stringify!(z)
            )
        );
    }
    test_field_z();
    fn test_field_w() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dvx_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).w) as usize - ptr as usize
            },
            20usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dvx_t),
                "::",
                stringify!(w)
            )
        );
    }
    test_field_w();
    fn test_field_h() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dvx_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).h) as usize - ptr as usize
            },
            24usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dvx_t),
                "::",
                stringify!(h)
            )
        );
    }
    test_field_h();
    fn test_field_d() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dvx_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).d) as usize - ptr as usize
            },
            28usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dvx_t),
                "::",
                stringify!(d)
            )
        );
    }
    test_field_d();
    fn test_field_uncertain() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dvx_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).uncertain) as usize - ptr as usize
            },
            32usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dvx_t),
                "::",
                stringify!(uncertain)
            )
        );
    }
    test_field_uncertain();
    fn test_field_groupid() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dvx_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).groupid) as usize - ptr as usize
            },
            33usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dvx_t),
                "::",
                stringify!(groupid)
            )
        );
    }
    test_field_groupid();
    fn test_field_data() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dvx_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).data) as usize - ptr as usize
            },
            40usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dvx_t),
                "::",
                stringify!(data)
            )
        );
    }
    test_field_data();
}
pub const m3dc_use: _bindgen_ty_4 = 0;
pub const m3dc_inc: _bindgen_ty_4 = 1;
pub const m3dc_mesh: _bindgen_ty_4 = 2;
pub const m3dc_div: _bindgen_ty_4 = 3;
pub const m3dc_sub: _bindgen_ty_4 = 4;
pub const m3dc_len: _bindgen_ty_4 = 5;
pub const m3dc_dist: _bindgen_ty_4 = 6;
pub const m3dc_degu: _bindgen_ty_4 = 7;
pub const m3dc_deg: _bindgen_ty_4 = 8;
pub const m3dc_rangeu: _bindgen_ty_4 = 9;
pub const m3dc_range: _bindgen_ty_4 = 10;
pub const m3dc_paru: _bindgen_ty_4 = 11;
pub const m3dc_parv: _bindgen_ty_4 = 12;
pub const m3dc_trim: _bindgen_ty_4 = 13;
pub const m3dc_hole: _bindgen_ty_4 = 14;
pub const m3dc_scrv: _bindgen_ty_4 = 15;
pub const m3dc_sp: _bindgen_ty_4 = 16;
pub const m3dc_bez1: _bindgen_ty_4 = 17;
pub const m3dc_bsp1: _bindgen_ty_4 = 18;
pub const m3dc_bez2: _bindgen_ty_4 = 19;
pub const m3dc_bsp2: _bindgen_ty_4 = 20;
pub const m3dc_bezun: _bindgen_ty_4 = 21;
pub const m3dc_bezu: _bindgen_ty_4 = 22;
pub const m3dc_bezn: _bindgen_ty_4 = 23;
pub const m3dc_bez: _bindgen_ty_4 = 24;
pub const m3dc_nurbsun: _bindgen_ty_4 = 25;
pub const m3dc_nurbsu: _bindgen_ty_4 = 26;
pub const m3dc_nurbsn: _bindgen_ty_4 = 27;
pub const m3dc_nurbs: _bindgen_ty_4 = 28;
pub const m3dc_conn: _bindgen_ty_4 = 29;
pub const m3dc_line: _bindgen_ty_4 = 30;
pub const m3dc_polygon: _bindgen_ty_4 = 31;
pub const m3dc_circle: _bindgen_ty_4 = 32;
pub const m3dc_cylinder: _bindgen_ty_4 = 33;
pub const m3dc_shpere: _bindgen_ty_4 = 34;
pub const m3dc_torus: _bindgen_ty_4 = 35;
pub const m3dc_cone: _bindgen_ty_4 = 36;
pub const m3dc_cube: _bindgen_ty_4 = 37;
pub type _bindgen_ty_4 = ::std::os::raw::c_int;
pub const m3dcp_mi_t: _bindgen_ty_5 = 1;
pub const m3dcp_hi_t: _bindgen_ty_5 = 2;
pub const m3dcp_fi_t: _bindgen_ty_5 = 3;
pub const m3dcp_ti_t: _bindgen_ty_5 = 4;
pub const m3dcp_vi_t: _bindgen_ty_5 = 5;
pub const m3dcp_qi_t: _bindgen_ty_5 = 6;
pub const m3dcp_vc_t: _bindgen_ty_5 = 7;
pub const m3dcp_i1_t: _bindgen_ty_5 = 8;
pub const m3dcp_i2_t: _bindgen_ty_5 = 9;
pub const m3dcp_i4_t: _bindgen_ty_5 = 10;
pub const m3dcp_va_t: _bindgen_ty_5 = 11;
pub type _bindgen_ty_5 = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct m3dcd_t {
    pub p: u8,
    pub a: [u8; 8usize],
}
#[test]
fn bindgen_test_layout_m3dcd_t() {
    assert_eq!(
        ::std::mem::size_of::<m3dcd_t>(),
        9usize,
        concat!("Size of: ", stringify!(m3dcd_t))
    );
    assert_eq!(
        ::std::mem::align_of::<m3dcd_t>(),
        1usize,
        concat!("Alignment of ", stringify!(m3dcd_t))
    );
    fn test_field_p() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dcd_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).p) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dcd_t),
                "::",
                stringify!(p)
            )
        );
    }
    test_field_p();
    fn test_field_a() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dcd_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).a) as usize - ptr as usize
            },
            1usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dcd_t),
                "::",
                stringify!(a)
            )
        );
    }
    test_field_a();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct m3dc_t {
    pub type_: u16,
    pub arg: *mut u32,
}
#[test]
fn bindgen_test_layout_m3dc_t() {
    assert_eq!(
        ::std::mem::size_of::<m3dc_t>(),
        16usize,
        concat!("Size of: ", stringify!(m3dc_t))
    );
    assert_eq!(
        ::std::mem::align_of::<m3dc_t>(),
        8usize,
        concat!("Alignment of ", stringify!(m3dc_t))
    );
    fn test_field_type() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dc_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).type_) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dc_t),
                "::",
                stringify!(type_)
            )
        );
    }
    test_field_type();
    fn test_field_arg() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dc_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).arg) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dc_t),
                "::",
                stringify!(arg)
            )
        );
    }
    test_field_arg();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct m3dh_t {
    pub name: *mut ::std::os::raw::c_char,
    pub group: M3D_INDEX,
    pub numcmd: u32,
    pub cmd: *mut m3dc_t,
}
